--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,7 @@ display: flex;
 padding: 24px 156px 24px 156px;
 border: 0px, 0px, 1px, 0px;
 border-bottom: 1px solid #e7e9fc;
+box-shadow: cu valorile 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   
 }
 
@@ -300,10 +301,16 @@ gap: 40px;
 }
 
 .hero-image {
-width: 1440px;
+max-width: 1440px;
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-image.jpg);
+background-repeat: no-repeat;
+background-position: center;
+background-size: cover;
 height: 600px;
 top: 72px;
 padding: 188px 0;
+
+
 
 }
 
@@ -427,6 +434,9 @@ padding: 120px 0;
 .footer-container
 {
   display: inline-block;
+  display: flex;
+  align-items: baseline;
+  margin-right: 120px;
 }
 
 .section-two-element
@@ -440,6 +450,7 @@ padding: 120px 0;
 {
   display: flex;
   gap: 24px;
+  justify-content: center;
 }
 
 .svg-list-element
@@ -447,11 +458,12 @@ padding: 120px 0;
   fill: var(--color-light);
   background-color: var(--color-text);
   display: flex;
-  width: 16px;
-  height: 16px;
+  width: 40px;
+  height: 40px;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+ 
 }
 
 .svg-elements-big
@@ -474,9 +486,32 @@ padding: 120px 0;
 .svg-elements-section-two
 {
   fill: var(--color-titles-body);
-  width: 64px;
-  height: 64px;
+  background-color: var(--color-light)
+  height: 112px;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
+.svg-elements-list
+{
+display: flex;
+background-color: var(--color-text);
+width: 100%;
+height: 100%;
+border-radius: 50%;
+align-items: center;
+}
+
+.svg-elements-section-five
+{
+display: flex;
+width: 100%;
+height: 100%;
+border-radius: 50%;
+align-items: center;
+border: 1px solid #8e8f99;
+justify-content: center;
 }
