--- a/css/styles.css
+++ b/css/styles.css
@@ -124,13 +124,20 @@ body {
   
 }
 
-.button:hover,
-:focus {
+.button:hover
+ {
   color: #ffffffff;
   background-color: #404bbf;
   border: 1px solid transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.button:focus {
+  color: #ffffffff;
+  background-color: #404bbf;
+  border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 
 .order-service-button
 {
@@ -269,7 +276,7 @@ margin-bottom: 72px;
     min-width: 264px;
     border-radius: 0px 0px 4px 4px;
     display: block;
-    box-shadow: cu valorile 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     width: 100%;
     height: 100%;
 }
@@ -472,11 +479,13 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+
  
 }
-.svg-list-element:hover,:focus
+.svg-list-element:hover,
+:focus
 {
-  border-color: #404bbf;
+  background-color: #404bbf;
 }
 
 .svg-elements-big
@@ -487,6 +496,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   height: 88px;
   align-items: center;
   justify-content: center;
+  color: var(--icons-color);
 
 }
 
@@ -533,18 +543,21 @@ border-radius: 50%;
 align-items: center;
 border-radius: 4px;
 border: 1px solid var(--icons-color);
+color: var(--icons-color);
 justify-content: center;
 }
 
-.svg-elements-section-five:hover,:focus
+.svg-elements-section-five:hover,
+:focus
 {
+  color: #404bbf;
   border-color: #404bbf;
 }
 
 .div-section-two
 {
   height: 112px;
-  background-color: var(--color-light);
+  background-color: #f4f4fd;
 }
 
 .p-footer-two
@@ -563,7 +576,7 @@ justify-content: center;
 
 .div-one-footer
 {
-  margin-right: 120px;
+  gap: 120px;
 
 }
 
