--- a/css/styles.css
+++ b/css/styles.css
@@ -293,7 +293,7 @@ display: flex;
 padding: 24px 156px 24px 156px;
 border: 0px, 0px, 1px, 0px;
 border-bottom: 1px solid #e7e9fc;
-box-shadow: cu valorile 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   
 }
 
@@ -483,7 +483,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
  
 }
 .svg-list-element:hover,
-:focus
+{
+  background-color: #404bbf;
+}
+
+.svg-list-element:focus
 {
   background-color: #404bbf;
 }
@@ -503,6 +507,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .svg-elements-big:hover,:focus
 {
   border-color: #404bbf;
+  color: #404bbf;
 }
 
 
@@ -547,8 +552,13 @@ color: var(--icons-color);
 justify-content: center;
 }
 
-.svg-elements-section-five:hover,
-:focus
+.svg-elements-section-five:hover
+{
+  color: #404bbf;
+  border-color: #404bbf;
+}
+
+.svg-elements-section-five:focus
 {
   color: #404bbf;
   border-color: #404bbf;
@@ -591,8 +601,13 @@ justify-content: center;
   border-radius: 50%;
 }
 
-.footer-icon:hover,
-:focus
+.footer-icon:hover
+{
+
+  background-color: #31d0aa;
+}
+
+.footer-icon:focus
 {
 
   background-color: #31d0aa;
