--- a/css/styles.css
+++ b/css/styles.css
@@ -482,7 +482,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
  
 }
-.svg-list-element:hover,
+.svg-list-element:hover
 {
   background-color: #404bbf;
 }
@@ -504,7 +504,8 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 }
 
-.svg-elements-big:hover,:focus
+.svg-elements-big:hover,
+:focus
 {
   border-color: #404bbf;
   color: #404bbf;
@@ -586,7 +587,7 @@ justify-content: center;
 
 .div-one-footer
 {
-  gap: 120px;
+  margin-right: 120px;
 
 }
 
